feat: add meal tracking overview page layout and styling
Includes mealTracking.html and mealTracking.css:
- Top bar and layout grid
- Overview and side panel design

To be completed:
- progress circle furthur development
- Integrate with menu grid
- Adding food page
- Setting goal page
- Javascript functionality for interactivity

--- a/css/palette.css
+++ b/css/palette.css
@@ -1,9 +1,11 @@
 :root {
-  --colour-primary: #a8abc1;
-  --colour-primary-dark: #3f4373;
-  --colour-accent: #cd9f76;
-  --colour-green: #8fb798;
-  --colour-background: #fbfbfb;
-  --colour-background-dark: #e1e1e1;
-  --colour-text: #000000;
+	--colour-primary: #a8abc1;
+	--colour-primary-dark: #3f4373;
+	--colour-accent: #cd9f76;
+	--colour-accent-background: #f1750998;
+	--colour-green: #8fb798;
+	--colour-green-background: #8fb7986a;
+	--colour-background: #fbfbfb;
+	--colour-background-dark: #e1e1e1;
+	--colour-text: #000000;
 }
