labelled menu button, implementing workout

--- a/css/sharedStyle.css
+++ b/css/sharedStyle.css
@@ -8,6 +8,7 @@ body {
     color: var(--colour-text);
 }
 
+/* the whole horizontal bar */
 .topBar {
     width: 100%;
     height: 75px;
@@ -18,6 +19,7 @@ body {
     
 }
 
+/* app name */
 .topBar h1 {
     margin: 0;
     font-size: 28px;
@@ -25,6 +27,7 @@ body {
     letter-spacing: 1px;
 }
 
+/* logo picture */
 .topBar img{
     height: 60px;          /* slightly smaller than bar height (75px) */
     width: auto;           /* keeps correct aspect ratio */
@@ -33,18 +36,19 @@ body {
     object-fit: contain;
 }
 
+
 .topBar div:first-child {
   display: flex;
   align-items: center;  /* centers the logo and text vertically */
 }
 
-.appName{
+/* .appName{
     margin: 0;
     font-size: 40px;
     font-weight: 700;
     color: var(--colour-primary-dark);
     letter-spacing: 2px;
-}
+} */
 
 .rightButts {
   display: flex;
@@ -55,7 +59,6 @@ body {
 .logoutButt {
   background-color: var(--colour-primary-dark);
   color: var(--colour-background);
-  border: none;
   padding: 10px 18px;
   border-radius: 8px;
   font-size: 16px;
@@ -67,7 +70,6 @@ body {
 .profileButt {
     height: 40px;
     width: 40px;
-    border-radius: 50%;
     cursor: pointer;
     display: flex;
     align-items: center;
@@ -77,8 +79,10 @@ body {
 
 .menuBtn {
   position: fixed;
-  bottom: 20px;
-  right: 20px;
-  width: 100px;
-  height: 100px;
+  bottom: 2%;
+  right: 1.5%;
+  width: 7%;
+  height: auto;
+  cursor: pointer;
+
 }
