--- a/css/mealTracking.css
+++ b/css/mealTracking.css
@@ -1,4 +1,5 @@
 @import url(/css/palette.css);
+@import url(/css/sharedStyle.css);
 
 * {
 	padding: 0;
@@ -10,77 +11,7 @@ html {
 	font-size: 62.5%;
 }
 
-body {
-	margin: 0;
-	font-family: 'Monaco', 'Courier New', monospace;
-}
-
-.topBar {
-	width: 100%;
-	height: 75px;
-	background-color: var(--colour-primary);
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
-}
-
-.topBar h1 {
-	margin: 0;
-	font-size: 28px;
-	color: black;
-	letter-spacing: 1px;
-}
-
-.topBar img {
-	height: 60px; /* slightly smaller than bar height (75px) */
-	width: auto; /* keeps correct aspect ratio */
-	margin-left: 20px; /* small space from the left edge */
-	margin-right: 15px; /* space between logo and text */
-	object-fit: contain;
-}
-
-.topBar div:first-child {
-	display: flex;
-	align-items: center; /* centers the logo and text vertically */
-}
-
-.appName {
-	margin: 0;
-	font-size: 40px;
-	font-weight: 700;
-	color: var(--colour-primary-dark);
-	letter-spacing: 2px;
-}
-
-.rightButts {
-	display: flex;
-	align-items: center;
-	gap: 80px; /* spacing between icon and button */
-}
-
-.logoutButt {
-	background-color: var(--colour-primary-dark);
-	color: var(--colour-background);
-	border: none;
-	padding: 10px 18px;
-	border-radius: 8px;
-	font-size: 16px;
-	margin-right: 20px;
-	cursor: pointer;
-	transition: background-color 0.3s ease;
-}
-
-.profileButt {
-	height: 40px;
-	width: 40px;
-	border-radius: 50%;
-	cursor: pointer;
-	display: flex;
-	align-items: center;
-	transition: transform 0.2s ease, border-color 0.3s ease;
-}
-/* navbar styles done */
-
+/* *overview page* */
 .app {
 	max-width: 120rem;
 	height: 80vh;
@@ -163,7 +94,7 @@ body {
 	height: 100%;
 }
 
-/* progress circle starts */
+/**************** progress circle starts ****************/
 .circular-progress {
 	width: 20rem;
 	height: 20rem;
@@ -194,7 +125,8 @@ body {
 	transition: stroke-dasharray 0.3s linear 0s;
 	stroke: #5394fd;
 }
-/* progress circle ends */
+/**************** progress circle ends ****************/
+
 .circular-progress-toggle-bar {
 	width: 100%;
 	height: 3rem;
