--- a/css/sharedStyle.css
+++ b/css/sharedStyle.css
@@ -68,7 +68,11 @@ body {
 	font-size: 16px;
 	margin-right: 20px;
 	cursor: pointer;
-	transition: background-color 0.3s ease;
+	/* transition: background-color 0.3s ease; */
+}
+
+.logoutButt:hover {
+  background-color: var(--colour-accent-background);
 }
 
 .profileButt {
@@ -81,14 +85,6 @@ body {
 }
 /*** end of top bar CSS ***/
 
-/* .menuBtn {
-	position: fixed;
-	bottom: 2%;
-	right: 1.5%;
-	width: 7%;
-	height: auto;
-	cursor: pointer;
-} */
 
 .navBar {
 	display: flex;
