--- a/css/palette.css
+++ b/css/palette.css
@@ -8,5 +8,46 @@
 	--colour-green-background: #8fb7986a;
 	--colour-background: #fbfbfb;
 	--colour-background-dark: #e1e1e1;
-	--colour-text: #000000;
+	--colour-text: #3f4373;
+	--colour-grey: #eef1f7;
+	--colour-ring-green: #128d3f;
+	--colour-ring-yellow: #cd9f76;
+	--colour-ring-orange: #f17509;
+	--colour-on-primary: #ffffff;
+}
+
+html[data-theme='rg-color-blind'] {
+	--colour-primary: #7fa2c3;
+	--colour-primary-dark: #2f486d;
+	--colour-accent: #f29d4b;
+	--colour-accent-background: #f29d4b94;
+	--colour-green: #4f88b8;
+	--colour-dark-green: #39688d;
+	--colour-green-background: #4f88b866;
+	--colour-background: #fcfcfc;
+	--colour-background-dark: #dedede;
+	--colour-text: #141414;
+	--colour-grey: #e8ecf4;
+	--colour-ring-green: #4b8ad8;
+	--colour-ring-yellow: #f0c36a;
+	--colour-ring-orange: #db6a1f;
+	--colour-on-primary: #ffffff;
+}
+
+html[data-theme='dark-theme'] {
+	--colour-primary: #4a4d57;
+	--colour-primary-dark: #2b2d34;
+	--colour-accent: #c4864a;
+	--colour-accent-background: #c4864a52;
+	--colour-green: #5c9276;
+	--colour-dark-green: #3f6a55;
+	--colour-green-background: #5c927633;
+	--colour-background: #1f2127;
+	--colour-background-dark: #2d2f36;
+	--colour-text: #f1f1f1;
+	--colour-grey: #3a3d45;
+	--colour-ring-green: #4cb08f;
+	--colour-ring-yellow: #dca552;
+	--colour-ring-orange: #c9723a;
+	--colour-on-primary: #f5f5f5;
 }
