--- a/css/registrationStyle.css
+++ b/css/registrationStyle.css
@@ -84,7 +84,7 @@ body {
   border: none;
   border-radius: 4px;
   background-color: var(--colour-primary);
-  color: var(--colour-background);
+  color: var(--colour-on-primary);
 }
 
 .button button:hover {
