--- a/css/sharedStyle.css
+++ b/css/sharedStyle.css
@@ -19,7 +19,7 @@ a {
 body {
 	margin: 0;
 	font-family: 'Monaco', 'Courier New', monospace;
-	background-color: white;
+	background-color: var(--colour-background);
 	color: var(--colour-text);
 }
 
@@ -37,7 +37,7 @@ body {
 .topBar h1 {
 	margin: 0;
 	font-size: 28px;
-	color: black;
+	color: var(--colour-on-primary);
 	letter-spacing: 1px;
 }
 
@@ -77,13 +77,12 @@ body {
 
 .logoutButt {
 	background-color: var(--colour-primary-dark);
-	color: var(--colour-background);
+	color: var(--colour-on-primary);
 	padding: 10px 18px;
 	border-radius: 8px;
 	font-size: 16px;
 	margin-right: 20px;
 	cursor: pointer;
-	transition: background-color 0.3s ease;
 }
 
 .logoutButt:hover {
@@ -103,7 +102,7 @@ body {
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
-	background-color: #3f4373;
+	background-color: var(--colour-primary-dark);
 	width: 100rem;
 	height: 50rem;
 	z-index: 999;
@@ -133,12 +132,12 @@ body {
 
 .setting-pop-up-content {
 	padding: 3rem;
-	color: #fff;
+	color: var(--colour-on-primary);
 	font-family: 'Silkscreen', monospace;
 	font-size: 3rem;
 	display: flex;
 	flex-direction: column;
-	gap: 3rem;
+	gap: 2rem;
 }
 
 .setting-pop-up-change-username {
@@ -149,16 +148,20 @@ body {
 
 .setting-change-username-input {
 	width: 30%;
-	background: #fff;
+	background: var(--colour-background);
 	border-radius: 10rem;
 	padding: 0.6rem 1.2rem;
 	border: none;
 	min-height: 4rem;
 }
 
+.setting-change-username-input:focus::placeholder {
+	color: transparent;
+}
+
 .setting-change-username-confirm-btn {
-	background-color: #cd9f76;
-	color: #fff;
+	background-color: var(--colour-accent);
+	color: var(--colour-on-primary);
 	width: 10rem;
 	height: 4rem;
 	font-size: 1.5rem;
@@ -184,7 +187,7 @@ body {
 }
 
 .font-size-letter.selected {
-	border: 0.2rem solid #fff;
+	border: 0.2rem solid var(--colour-background);
 }
 
 .font-size-letter:hover {
@@ -204,6 +207,101 @@ body {
 .font-size-letter-3 {
 	width: 6rem;
 	height: 6rem;
+}
+
+.setting-color-container {
+	margin-top: 1rem;
+	display: flex;
+	gap: 4rem;
+}
+
+.color-palette {
+	width: 18rem;
+	height: 5rem;
+}
+
+.color-palette-option {
+	padding: 0.5rem;
+	display: flex;
+	flex-direction: column;
+	cursor: pointer;
+}
+
+.color-palette-option:hover {
+	transform: translateY(-0.5rem);
+}
+
+.color-palette-option.selected {
+	border: 0.3rem solid #fff;
+}
+
+.color-palette-text {
+	margin-top: 0.3rem;
+	font-size: 1.5rem;
+	font-family: monospace;
+}
+
+.setting-color-big-container {
+	display: flex;
+	justify-content: flex-start;
+	gap: 10rem;
+}
+
+.info-icon-color-explanation-container {
+	display: flex;
+	margin-top: 2rem;
+}
+
+.info-icon-color-explanation {
+	cursor: pointer;
+	width: 4rem;
+	height: 4rem;
+}
+
+.info-icon-color-explanation:hover {
+	transform: translateY(-0.5rem);
+}
+
+.setting-pop-up-overlay {
+	display: none;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: rgba(0, 0, 0, 0.7); /* darkness */
+	z-index: 1000;
+}
+
+.setting-pop-up-top-level-message {
+	display: none;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	background-color: var(--colour-primary-dark);
+	width: 75rem;
+	height: 25rem;
+
+	/* this is has to be bigger than overlay of pop-up window, so 1001 */
+	z-index: 1001;
+	border-radius: 3rem;
+	flex-direction: column;
+}
+
+.setting-pop-up-content {
+	font-size: 1.5rem;
+}
+
+.setting-pop-up-content a {
+	color: var(--colour-accent);
+	text-decoration: underline;
+}
+
+.setting-pop-up-overlay {
+	display: 'none';
+	border-top-left-radius: 3rem;
+	border-top-right-radius: 3rem;
 }
 
 /* this turns backgroun dark when popup window opened */
@@ -231,15 +329,15 @@ body {
 	display: flex;
 	justify-content: flex-start;
 	align-items: center;
-	color: #fff;
+	color: var(--colour-on-primary);
 	background-color: var(--colour-primary-dark);
 }
 
 .navbar-link {
-	color: #fff;
+	color: var(--colour-on-primary);
 	font-size: 1.5rem;
 	padding: 0.5rem 3rem;
-	border-right: 0.2rem solid #000;
+	border-right: 0.2rem solid var(--colour-text);
 }
 
 .navbar-link.selected {
@@ -251,10 +349,10 @@ body {
 }
 
 .navBar button {
-	color: #fff;
+	color: var(--colour-on-primary);
 	height: 40px;
 	width: 140px;
-	background-color: white;
+	background-color: var(--colour-background);
 	font-size: 15px;
 	font-style: bold;
 	border: none;
